Code erneut ausgeführt wegen Execution Count Fehler, diese angabe fehlte

--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -52,12 +52,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-21T13:00:58.465909Z",
-     "start_time": "2024-05-21T13:00:57.774716Z"
+     "end_time": "2024-05-21T15:37:57.584190Z",
+     "start_time": "2024-05-21T15:37:57.357410Z"
     }
    },
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -133,8 +133,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:27.835506Z",
-     "start_time": "2024-05-13T16:05:27.831857Z"
+     "end_time": "2024-05-21T15:37:57.610573Z",
+     "start_time": "2024-05-21T15:37:57.587434Z"
     }
    },
    "outputs": [
@@ -146,7 +146,7 @@
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -184,12 +184,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:27.860067Z",
-     "start_time": "2024-05-13T16:05:27.851182Z"
+     "end_time": "2024-05-21T15:37:57.640151Z",
+     "start_time": "2024-05-21T15:37:57.633935Z"
     }
    },
    "outputs": [],
-   "execution_count": 32
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -237,12 +237,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:27.867828Z",
-     "start_time": "2024-05-13T16:05:27.861249Z"
+     "end_time": "2024-05-21T15:37:57.645797Z",
+     "start_time": "2024-05-21T15:37:57.640815Z"
     }
    },
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -305,8 +305,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-21T13:10:31.223625Z",
-     "start_time": "2024-05-21T13:10:31.210929Z"
+     "end_time": "2024-05-21T15:37:57.660665Z",
+     "start_time": "2024-05-21T15:37:57.646497Z"
     }
    },
    "outputs": [
@@ -334,7 +334,7 @@
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -405,11 +405,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-21T14:21:00.720018Z",
-     "start_time": "2024-05-21T14:21:00.714060Z"
+     "end_time": "2024-05-21T15:37:57.667963Z",
+     "start_time": "2024-05-21T15:37:57.663176Z"
     }
    },
-   "execution_count": 30
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -436,7 +436,7 @@
       "text/plain": "       Ortschaftsname   PLZ  Zusatzziffer        Gemeindename  BFS-Nr  \\\n0     Aeugst am Albis  8914             0     Aeugst am Albis       1   \n1         Aeugstertal  8914             2     Aeugst am Albis       1   \n2           Zwillikon  8909             0  Affoltern am Albis       2   \n3  Affoltern am Albis  8910             0  Affoltern am Albis       2   \n4          Bonstetten  8906             0          Bonstetten       3   \n5           Sihlbrugg  6340             4     Hausen am Albis       4   \n6    Langnau am Albis  8135             0     Hausen am Albis       4   \n7     Hausen am Albis  8915             0     Hausen am Albis       4   \n8           Ebertswil  8925             0     Hausen am Albis       4   \n9            Hedingen  8908             0            Hedingen       5   \n\n  Kantonskürzel            E            N Sprache    Validity  \n0            ZH  2679402.872  1235842.010      de  2008-07-01  \n1            ZH  2679815.372  1237404.310      de  2008-07-01  \n2            ZH  2675280.133  1238108.286      de  2008-07-01  \n3            ZH  2676852.012  1236929.718      de  2008-07-01  \n4            ZH  2677412.150  1241078.278      de  2008-07-01  \n5            ZH  2686082.431  1230649.176      de  2008-07-01  \n6            ZH  2682031.828  1235594.870      de  2008-07-01  \n7            ZH  2682851.794  1233662.737      de  2008-07-01  \n8            ZH  2684421.805  1231375.039      de  2008-07-01  \n9            ZH  2676516.423  1239543.573      de  2008-07-01  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Ortschaftsname</th>\n      <th>PLZ</th>\n      <th>Zusatzziffer</th>\n      <th>Gemeindename</th>\n      <th>BFS-Nr</th>\n      <th>Kantonskürzel</th>\n      <th>E</th>\n      <th>N</th>\n      <th>Sprache</th>\n      <th>Validity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Aeugst am Albis</td>\n      <td>8914</td>\n      <td>0</td>\n      <td>Aeugst am Albis</td>\n      <td>1</td>\n      <td>ZH</td>\n      <td>2679402.872</td>\n      <td>1235842.010</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Aeugstertal</td>\n      <td>8914</td>\n      <td>2</td>\n      <td>Aeugst am Albis</td>\n      <td>1</td>\n      <td>ZH</td>\n      <td>2679815.372</td>\n      <td>1237404.310</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Zwillikon</td>\n      <td>8909</td>\n      <td>0</td>\n      <td>Affoltern am Albis</td>\n      <td>2</td>\n      <td>ZH</td>\n      <td>2675280.133</td>\n      <td>1238108.286</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Affoltern am Albis</td>\n      <td>8910</td>\n      <td>0</td>\n      <td>Affoltern am Albis</td>\n      <td>2</td>\n      <td>ZH</td>\n      <td>2676852.012</td>\n      <td>1236929.718</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Bonstetten</td>\n      <td>8906</td>\n      <td>0</td>\n      <td>Bonstetten</td>\n      <td>3</td>\n      <td>ZH</td>\n      <td>2677412.150</td>\n      <td>1241078.278</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>Sihlbrugg</td>\n      <td>6340</td>\n      <td>4</td>\n      <td>Hausen am Albis</td>\n      <td>4</td>\n      <td>ZH</td>\n      <td>2686082.431</td>\n      <td>1230649.176</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Langnau am Albis</td>\n      <td>8135</td>\n      <td>0</td>\n      <td>Hausen am Albis</td>\n      <td>4</td>\n      <td>ZH</td>\n      <td>2682031.828</td>\n      <td>1235594.870</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>Hausen am Albis</td>\n      <td>8915</td>\n      <td>0</td>\n      <td>Hausen am Albis</td>\n      <td>4</td>\n      <td>ZH</td>\n      <td>2682851.794</td>\n      <td>1233662.737</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>Ebertswil</td>\n      <td>8925</td>\n      <td>0</td>\n      <td>Hausen am Albis</td>\n      <td>4</td>\n      <td>ZH</td>\n      <td>2684421.805</td>\n      <td>1231375.039</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>Hedingen</td>\n      <td>8908</td>\n      <td>0</td>\n      <td>Hedingen</td>\n      <td>5</td>\n      <td>ZH</td>\n      <td>2676516.423</td>\n      <td>1239543.573</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,11 +448,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-21T14:44:50.887295Z",
-     "start_time": "2024-05-21T14:44:50.878604Z"
+     "end_time": "2024-05-21T15:37:57.677355Z",
+     "start_time": "2024-05-21T15:37:57.668899Z"
     }
    },
-   "execution_count": 52
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -471,7 +471,7 @@
       "text/plain": "                Ortschaftsname   PLZ  Zusatzziffer Gemeindename  BFS-Nr  \\\n1302               Schachen LU  6105             0    Entlebuch    1002   \n1303                  Wolhusen  6110             0    Entlebuch    1002   \n1304                 Entlebuch  6162             0    Entlebuch    1002   \n1305                     Rengg  6162             2    Entlebuch    1002   \n1306  Finsterwald b. Entlebuch  6162             3    Entlebuch    1002   \n1307                     Ebnet  6163             0    Entlebuch    1002   \n1308                  Hasle LU  6166             0    Entlebuch    1002   \n1309                Schüpfheim  6170             0    Entlebuch    1002   \n1315                 Entlebuch  6162             0   Hasle (LU)    1005   \n\n     Kantonskürzel            E            N Sprache    Validity  \n1302            LU  2651765.170  1206458.353      de  2008-07-01  \n1303            LU  2647835.016  1209085.303      de  2008-07-01  \n1304            LU  2648181.509  1204613.219      de  2008-07-01  \n1305            LU  2651085.330  1206090.284      de  2008-07-01  \n1306            LU  2651398.164  1196309.788      de  2008-07-01  \n1307            LU  2649189.420  1207868.916      de  2008-07-01  \n1308            LU  2643949.810  1203182.068      de  2008-07-01  \n1309            LU  2643913.598  1202607.042      de  2008-07-01  \n1315            LU  2647203.726  1204928.665      de  2008-07-01  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Ortschaftsname</th>\n      <th>PLZ</th>\n      <th>Zusatzziffer</th>\n      <th>Gemeindename</th>\n      <th>BFS-Nr</th>\n      <th>Kantonskürzel</th>\n      <th>E</th>\n      <th>N</th>\n      <th>Sprache</th>\n      <th>Validity</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1302</th>\n      <td>Schachen LU</td>\n      <td>6105</td>\n      <td>0</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2651765.170</td>\n      <td>1206458.353</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1303</th>\n      <td>Wolhusen</td>\n      <td>6110</td>\n      <td>0</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2647835.016</td>\n      <td>1209085.303</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1304</th>\n      <td>Entlebuch</td>\n      <td>6162</td>\n      <td>0</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2648181.509</td>\n      <td>1204613.219</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1305</th>\n      <td>Rengg</td>\n      <td>6162</td>\n      <td>2</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2651085.330</td>\n      <td>1206090.284</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1306</th>\n      <td>Finsterwald b. Entlebuch</td>\n      <td>6162</td>\n      <td>3</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2651398.164</td>\n      <td>1196309.788</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1307</th>\n      <td>Ebnet</td>\n      <td>6163</td>\n      <td>0</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2649189.420</td>\n      <td>1207868.916</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1308</th>\n      <td>Hasle LU</td>\n      <td>6166</td>\n      <td>0</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2643949.810</td>\n      <td>1203182.068</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1309</th>\n      <td>Schüpfheim</td>\n      <td>6170</td>\n      <td>0</td>\n      <td>Entlebuch</td>\n      <td>1002</td>\n      <td>LU</td>\n      <td>2643913.598</td>\n      <td>1202607.042</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n    <tr>\n      <th>1315</th>\n      <td>Entlebuch</td>\n      <td>6162</td>\n      <td>0</td>\n      <td>Hasle (LU)</td>\n      <td>1005</td>\n      <td>LU</td>\n      <td>2647203.726</td>\n      <td>1204928.665</td>\n      <td>de</td>\n      <td>2008-07-01</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,11 +483,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-21T14:54:30.413413Z",
-     "start_time": "2024-05-21T14:54:30.403787Z"
+     "end_time": "2024-05-21T15:37:57.685636Z",
+     "start_time": "2024-05-21T15:37:57.678522Z"
     }
    },
-   "execution_count": 63
+   "execution_count": 8
   },
   {
    "cell_type": "markdown",
@@ -515,8 +515,13 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-21T15:37:57.831845Z",
+     "start_time": "2024-05-21T15:37:57.686311Z"
+    }
+   },
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -544,8 +549,13 @@
     "connection.commit()"
    ],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-21T15:37:57.839190Z",
+     "start_time": "2024-05-21T15:37:57.832526Z"
+    }
+   },
+   "execution_count": 10
   },
   {
    "cell_type": "code",
@@ -568,12 +578,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:28.020129Z",
-     "start_time": "2024-05-13T16:05:28.015836Z"
+     "end_time": "2024-05-21T15:37:57.844047Z",
+     "start_time": "2024-05-21T15:37:57.839905Z"
     }
    },
    "outputs": [],
-   "execution_count": 35
+   "execution_count": 11
   },
   {
    "cell_type": "code",
@@ -596,12 +606,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:28.025131Z",
-     "start_time": "2024-05-13T16:05:28.021166Z"
+     "end_time": "2024-05-21T15:37:57.848662Z",
+     "start_time": "2024-05-21T15:37:57.844616Z"
     }
    },
    "outputs": [],
-   "execution_count": 36
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -624,12 +634,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:28.029729Z",
-     "start_time": "2024-05-13T16:05:28.025748Z"
+     "end_time": "2024-05-21T15:37:57.852904Z",
+     "start_time": "2024-05-21T15:37:57.849249Z"
     }
    },
    "outputs": [],
-   "execution_count": 37
+   "execution_count": 13
   },
   {
    "cell_type": "code",
@@ -658,12 +668,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:33.759196Z",
-     "start_time": "2024-05-13T16:05:28.030354Z"
+     "end_time": "2024-05-21T15:38:03.493607Z",
+     "start_time": "2024-05-21T15:37:57.853556Z"
     }
    },
    "outputs": [],
-   "execution_count": 38
+   "execution_count": 14
   },
   {
    "cell_type": "code",
@@ -683,12 +693,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:33.772916Z",
-     "start_time": "2024-05-13T16:05:33.759929Z"
+     "end_time": "2024-05-21T15:38:03.503772Z",
+     "start_time": "2024-05-21T15:38:03.494338Z"
     }
    },
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -708,12 +718,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:33.777792Z",
-     "start_time": "2024-05-13T16:05:33.773738Z"
+     "end_time": "2024-05-21T15:38:03.508454Z",
+     "start_time": "2024-05-21T15:38:03.504475Z"
     }
    },
    "outputs": [],
-   "execution_count": 40
+   "execution_count": 16
   },
   {
    "cell_type": "code",
@@ -742,12 +752,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:05:35.827829Z",
-     "start_time": "2024-05-13T16:05:33.779662Z"
+     "end_time": "2024-05-21T15:38:05.551439Z",
+     "start_time": "2024-05-21T15:38:03.509215Z"
     }
    },
    "outputs": [],
-   "execution_count": 41
+   "execution_count": 17
   },
   {
    "cell_type": "code",
@@ -769,12 +779,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:10:07.042678Z",
-     "start_time": "2024-05-13T16:05:35.828454Z"
+     "end_time": "2024-05-21T15:42:32.790986Z",
+     "start_time": "2024-05-21T15:38:05.552125Z"
     }
    },
    "outputs": [],
-   "execution_count": 42
+   "execution_count": 18
   },
   {
    "cell_type": "code",
@@ -798,12 +808,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:10:07.044907Z",
-     "start_time": "2024-05-13T16:10:07.043420Z"
+     "end_time": "2024-05-21T15:42:32.793123Z",
+     "start_time": "2024-05-21T15:42:32.791661Z"
     }
    },
    "outputs": [],
-   "execution_count": 43
+   "execution_count": 19
   },
   {
    "cell_type": "code",
@@ -825,12 +835,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:10:07.228210Z",
-     "start_time": "2024-05-13T16:10:07.045607Z"
+     "end_time": "2024-05-21T15:42:32.967421Z",
+     "start_time": "2024-05-21T15:42:32.793840Z"
     }
    },
    "outputs": [],
-   "execution_count": 44
+   "execution_count": 20
   },
   {
    "cell_type": "code",
@@ -854,12 +864,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:10:07.237082Z",
-     "start_time": "2024-05-13T16:10:07.228951Z"
+     "end_time": "2024-05-21T15:42:32.975552Z",
+     "start_time": "2024-05-21T15:42:32.968200Z"
     }
    },
    "outputs": [],
-   "execution_count": 45
+   "execution_count": 21
   },
   {
    "cell_type": "code",
@@ -891,12 +901,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:10:52.404447Z",
-     "start_time": "2024-05-13T16:10:07.237644Z"
+     "end_time": "2024-05-21T15:43:17.872969Z",
+     "start_time": "2024-05-21T15:42:32.976189Z"
     }
    },
    "outputs": [],
-   "execution_count": 46
+   "execution_count": 22
   },
   {
    "cell_type": "code",
@@ -927,12 +937,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:11:00.571617Z",
-     "start_time": "2024-05-13T16:10:52.405123Z"
+     "end_time": "2024-05-21T15:43:25.664048Z",
+     "start_time": "2024-05-21T15:43:17.873660Z"
     }
    },
    "outputs": [],
-   "execution_count": 47
+   "execution_count": 23
   },
   {
    "cell_type": "code",
@@ -963,12 +973,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:11:02.920879Z",
-     "start_time": "2024-05-13T16:11:00.572329Z"
+     "end_time": "2024-05-21T15:43:27.985358Z",
+     "start_time": "2024-05-21T15:43:25.667257Z"
     }
    },
    "outputs": [],
-   "execution_count": 48
+   "execution_count": 24
   },
   {
    "cell_type": "code",
@@ -989,11 +999,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-13T16:16:31.294936Z",
-     "start_time": "2024-05-13T16:16:31.275571Z"
+     "end_time": "2024-05-21T15:43:27.996989Z",
+     "start_time": "2024-05-21T15:43:27.985922Z"
     }
    },
-   "execution_count": 51
+   "execution_count": 25
   }
  ]
 }
