--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -492,7 +492,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Mit den nachfolgenden Codezeilen werden die Daten in die city-Tabelle eingelesen"
+    "Mit den nachfolgenden Codezeilen werden die Daten in die city-Tabelle eingelesen."
    ],
    "metadata": {
     "collapsed": false
