--- a/bina_dataimport.ipynb
+++ b/bina_dataimport.ipynb
@@ -94,7 +94,7 @@
     "Damit automatisch ein eindeutiger Primary Key generiert wird muss beim Import der Daten, der Platzhalter für das ID-Attribut leergelassen werden und mit NULL gefüllt werden. So wird automatisch ein Primary Key vergeben.\n",
     "\n",
     "__No Value Handling__\n",
-    "Leere Werte in den Datenquellen welche mit nan, NaN, na, etc. mit NULL ersetzt werden. Sonst wird der Wert als String interpretiert und gibt einen Fehler aus, wenn es sich um numerische Werte handelt."
+    "Leere Werte in den Datenquellen welche mit nan, NaN, na, etc. gelistet sind, müssen mit NULL ersetzt werden. Sonst wird der Wert als String interpretiert und gibt einen Fehler aus, wenn es sich um numerische Werte handelt."
    ],
    "metadata": {
     "collapsed": false
